[package]
name = "transit_plus_server"
version = "0.1.0"
authors = ["zainyusufazam@gmail.com"]
edition = "2021"

[dependencies]
actix-web = "^4.1.0"
base64 = "^0.13.0"
lazy_static = "^1.4.0"
serde = { version = "^1.0.137", features = ["derive"] }
serde_json = "^1.0.81"
sqlx = { version = "^0.6.0", features = ["postgres", "runtime-actix-rustls", "macros"] }
